--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mongoose": "^5.9.18",
+    "multer": "^1.4.2",
     "socket.io": "^2.3.0"
   }
 }
