--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "helmet": "^3.23.3",
     "mongoose": "^5.9.18",
     "multer": "^1.4.2",
     "sharp": "^0.25.4",
