--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.9.18",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "sharp": "^0.25.4",
     "socket.io": "^2.3.0",
